# CMakeList.txt : CMake project for PolicyBasedDesignProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (PolicyBasedDesignProject "main.cpp" "Policies.h" "Widget.h" "Widget.cpp")

# TODO: Add tests and install targets if needed.
